[tool.poetry]
name = "conf-webapi"
version = "0.1.0"
description = ""
authors = ["Jay Hsia <jayhsia1997@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# base
dependency-injector = "*"
fastapi = "*"
fastapi-limiter = "^0.1.6"
gunicorn = "*"
uvicorn = "*"
pydantic = "*"
pydantic-settings = "*"
python-dotenv = "*"
# django
django = "^5.1"
django-environ = "^0.12.0"
django-redis = "^5.4.0"
django-model-utils = "^5.0"
django-auditlog = "^3.0.0"
wagtail = "^6.3"
wagtail-modeladmin = "^2.1.0"
whitenoise = { version = "*", extras = ["brotli"] }
django-storages = { version = "*", extras = ["google"] }
# db
asyncpg = "*"
redis = "*"
sqlalchemy = "*"
psycopg2-binary = "^2.9.9"
# firebase
firebase-admin = "^6.5.0"
# security
pyjwt = "*"
# utils
httpx = "*"
ujson = "*"
pytz = "^2024.1"
pandas = "^2.2.3"
numpy = "2.2.1"
phonenumbers = "^8.13.53"
python-dateutil = "^2.9.0.post0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
alembic = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
